--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -1,1 +1,24 @@
 <h1>Courses</h1>
+
+{{#if courses.length}}
+    {{#each courses}}
+    <div class="row">
+        <div class="col s12 m7">
+            <div class="card">
+                <div class="card-image">
+                    <img src="{{img}}" title="{{title}}">
+                </div>
+                <div class="card-content">
+                    <span class="card-title">{{title}}</span>
+                    <p>Цена: {{price}}</p>
+                </div>
+                <div class="card-action">
+                    <a href="/course/{{id}}">Открыть курс</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    {{/each}}
+{{else}}
+
+{{/if}}
