app/part/add-card

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,6 +7,7 @@
                 <a href="/courses">Курсы</a>
             </li>
             <li {{#if isAdd}} class="active" {{/if}} ><a href="/add">Добавить курс</a></li>
+            <li {{#if isCard}} class="active" {{/if}} ><a href="/card">Корзина</a></li>
         </ul>
     </div>
 </nav>
