--- a/public/style.css
+++ b/public/style.css
@@ -2,3 +2,18 @@ nav .nav-wrapper {
     padding-left: 40px;
     padding-right: 40px;
 }
+
+.course {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.course h1 {
+    margin-bottom: 40px;
+}
+
+.course img {
+    max-width: 600px;
+    height: auto;
+}
