--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -10,10 +10,15 @@
                 </div>
                 <div class="card-content">
                     <span class="card-title">{{title}}</span>
-                    <p>Цена: {{price}}</p>
+                    <p class="price">Цена: <span>{{price}}</span></p>
                 </div>
                 <div class="card-action">
-                    <a href="/course/{{id}}">Открыть курс</a>
+                    <a href="/courses/{{id}}" target="_blank">Открыть курс</a>
+                    <a href="/courses/{{id}}/edit?allow=true">Редактировать</a>
+                    <form action="card/add" method="post">
+                        <input type="hidden" name="id" value="{{id}}">
+                        <button type="submit" class="btn btn-primary">Купить</button>
+                    </form>
                 </div>
             </div>
         </div>
