--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -15,7 +15,12 @@
         <span class="helper-text" data-error="Введите url картинки"></span>
     </div>
 
-    <input type="hidden" name="id" value="{{course.id}}">
+    <input type="hidden" name="id" value="{{course._id}}">
 
-    <button class="btn btn-primary">Редактировать</button>
+    <button type="submit" class="btn btn-primary">Редактировать</button>
+</form>
+
+<form action="/courses/remove" method="post">
+    <input type="hidden" name="id" value="{{course._id}}">
+    <button type="submit" class="btn red">Удалить</button>
 </form>
