--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -8,6 +8,7 @@
             </li>
             <li {{#if isAdd}} class="active" {{/if}} ><a href="/add">Добавить курс</a></li>
             <li {{#if isCard}} class="active" {{/if}} ><a href="/card">Корзина</a></li>
+            <li {{#if isOrder}} class="active" {{/if}} ><a href="/orders">Заказы</a></li>
         </ul>
     </div>
 </nav>
