--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -14,11 +14,13 @@
                 </div>
                 <div class="card-action">
                     <a href="/courses/id-{{_id}}" target="_blank">Открыть курс</a>
+                    {{#if @root.isAuth}}
                     <a href="/courses/id-{{_id}}/edit?allow=true">Редактировать</a>
                     <form action="card/add" method="post">
                         <input type="hidden" name="id" value="{{_id}}">
                         <button type="submit" class="btn btn-primary">Купить</button>
                     </form>
+                    {{/if}}
                 </div>
             </div>
         </div>
