--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -6,9 +6,14 @@
             <li {{#if isCourses}} class="active" {{/if}} >
                 <a href="/courses">Курсы</a>
             </li>
-            <li {{#if isAdd}} class="active" {{/if}} ><a href="/add">Добавить курс</a></li>
-            <li {{#if isCard}} class="active" {{/if}} ><a href="/card">Корзина</a></li>
-            <li {{#if isOrder}} class="active" {{/if}} ><a href="/orders">Заказы</a></li>
+            {{#if isAuth}}
+                <li {{#if isAdd}} class="active" {{/if}} ><a href="/add">Добавить курс</a></li>
+                <li {{#if isCard}} class="active" {{/if}} ><a href="/card">Корзина</a></li>
+                <li {{#if isOrder}} class="active" {{/if}} ><a href="/orders">Заказы</a></li>
+                <li><a href="auth/logout">Выйти</a></li>
+            {{else}}
+                <li {{#if isLogin}} class="active" {{/if}} ><a href="/auth/login#login">Войти</a></li>
+            {{/if}}
         </ul>
     </div>
 </nav>
